--- a/gestor_veterinaria/src/app/pages/sales-manager/devoluciones/find-devolucion.component.html
+++ b/gestor_veterinaria/src/app/pages/sales-manager/devoluciones/find-devolucion.component.html
@@ -1,1 +1,121 @@
-<p>find-devolucion works!</p>
+<div class="container">
+    <h1>Búsqueda de devoluciones</h1>
+    <hr>
+    <div class="container">
+        <form class="example-form form-floating p-2 m-2">
+            <mat-form-field class="m-3 example-full-width" >
+              <mat-label>Documento cliente</mat-label>
+              <input type="text" class="example-full-width"
+                     placeholder=""
+                     aria-label="Documento cliente"
+                     matInput
+                     [formControl]="myControl"
+                     [matAutocomplete]="auto"
+                     [(ngModel)]="criterio" 
+                    (focus)="limpiarInfo()"
+                     >
+              <mat-autocomplete #auto="matAutocomplete" class="example-full-width">
+                <mat-option *ngFor="let option of filteredOptions  | async" [value]="option.documento" (click)="selectForQuery(option)">
+                    {{option.documento}} - {{option.nombre}}
+                </mat-option>
+                            
+              </mat-autocomplete>
+            </mat-form-field>
+            <button mat-stroked-button color="primary" class="m-2" (click)="loadInfo()">Visualizar</button>      
+            
+        </form>
+    </div>    
+    <div class="container" *ngIf="forLoad">
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>                 
+                    <th>#</th>
+                    <th>Cliente</th>
+                    <th>Dirección de entrega</th>
+                    <th>Ciudad</th>
+                    <th>Observaciones</th>
+                    <th>Fecha</th>
+                    <th>Acción</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let item of salidaList |paginatorPipe:p_Size:page">
+                    <td class="col-1">{{item.idpedidos}}</td>
+                    <td>{{item.documento}} - {{item.nombre}}</td>
+                    <td>{{item.direccionEntrega}}</td>
+                    <td>{{item.ciudadN}}</td>
+                    <td>{{item.observaciones}}</td>
+                    <td>{{item.fecha|date}}</td>
+                    <td><a class="btn btn-success btn-sm" type="button"                      
+                      (click)="loadForUpdate(item)"                    
+                      >Ver</a></td>                 
+                </tr>
+            </tbody>
+           
+          </table>
+            <mat-paginator [length]="salidaList.length"
+            [pageSize]="p_Size"
+            [pageSizeOptions]="optionsPage"
+            (page)="pageEvent($event)"
+            aria-label="Select page"
+            class="m-3 example-full-width"
+            ></mat-paginator>
+    </div>
+
+    <div class="container" *ngIf="editar">       
+        <table class="table table-striped table-hover w-50">
+            <thead>
+                <tr>
+                    <th>Pedido</th>
+                    <th>Cliente</th>
+                   
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>{{OrderForUpd.idpedidos}}</td>
+                    <td>{{OrderForUpd.documento}} - {{OrderForUpd.nombre}}</td>                   
+                </tr>
+            </tbody>
+        </table> 
+
+        <div class="w-100" *ngIf="devolucionesPedido.length>0">
+            <table class="table table-striped table-hover w-100 " >
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Producto</th>
+                        <th>Cantidad</th>
+                        <th>Precio</th>
+                        <th>Observaciones</th>
+                        <th>% Impuesto</th>
+                        <th>% Descuento</th>                    
+                      
+                    </tr>
+                </thead>
+                <tbody >
+                    <tr *ngFor="let detalle of devolucionesPedido |paginatorPipe:pSize:pageD">
+                        <td>{{detalle.iddevoluciones}}</td>
+                        <td>{{detalle.producto}}</td>
+                        <td>{{detalle.cantidad}}</td>
+                        <td>{{detalle.precio}}</td>
+                        <td>{{detalle.observaciones}}</td>
+                        <td>{{detalle.impuesto}}</td>
+                        <td>{{detalle.descuento|number}}</td>
+                       
+                    </tr>
+                </tbody>
+            </table> 
+           <mat-paginator [length]="detalleL.length"
+            [pageSize]="pSize"
+            [pageSizeOptions]="optionsPageD"
+            (page)="pageEventD($event)"
+            aria-label="Select pageD"
+            class="m-3 example-full-width"
+            ></mat-paginator>
+        </div>
+       
+    </div>
+
+</div>
+
