--- a/gestor_veterinaria/src/app/pages/informes/dashboard/dashboard.component.html
+++ b/gestor_veterinaria/src/app/pages/informes/dashboard/dashboard.component.html
@@ -1,1 +1,13 @@
-<p>dashboard works!</p>
+<div class="container">
+    <h1 class="text-center">Dashboard</h1>  
+
+<hr>
+<nav>
+    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+      <a class="nav-link active" id="nav-cuidad-tab" data-bs-toggle="tab" data-bs-target="#nav-cuidad" type="button" role="tab" aria-controls="nav-cuidad" aria-selected="true"  routerLink="./ventas" > <span class="material-icons bi md-48">trending_up</span>Dashboard Productos</a>
+     <a class="nav-link" id="nav-tipoDoc-tab" data-bs-toggle="tab" data-bs-target="#nav-tipoDoc" type="button" role="tab" aria-controls="nav-tipoDoc" aria-selected="false"  routerLink="./ventasServicios"   > <span class="material-icons bi md-48">done_all</span>Dashboard Servicios</a>
+     <a class="nav-link" id="nav-tipoDoc-tab" data-bs-toggle="tab" data-bs-target="#nav-tipoDoc" type="button" role="tab" aria-controls="nav-tipoDoc" aria-selected="false"  routerLink="./general"   > <span class="material-icons bi md-48">assessment</span>Dashboard General</a>
+    </div>
+</nav>
+
+<router-outlet></router-outlet>       
