--- a/gestor_veterinaria/src/app/pages/informes/ventas-clientes/ventas-clientes.component.html
+++ b/gestor_veterinaria/src/app/pages/informes/ventas-clientes/ventas-clientes.component.html
@@ -1,12 +1,12 @@
 <div class="container">
-    <h1>Ventas Productos y Servicios</h1>
+    <h1>Ventas Productos y Servicios po cliente</h1>
     <hr>
     <form action="" [formGroup]="miForm">
-        <div class="row ">
+        <div class="row">
           
             <div class="col-1">
                 <div class="form-floating m-3 mb-5 " style="width: 95px;align-items: flex-start;">
-                    <select class="form-select" id="anios" formControlName="anio" (change)="filtro()"> 
+                    <select class="form-select " id="anios" formControlName="anio" (change)="filtro()"> 
                         <option value="0">Todos</option>                                                           
                         <option *ngFor="let item of yearList.sort().reverse()" [value]="item"  >{{item}}</option>                                  
                     </select>
